[tool.poetry]
name = "un-digital-library-api"
version = "0.1.0"
description = "API to interact with UN Digital Library and format output in a more convenient way"
authors = ["Clément Sicard <clement@sicard.ch>"]
maintainers = ["Clément Sicard <clement@sicard.ch>"]
readme = "README.md"
packages = [{include = "undl"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pymarc = "^4.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.2.2"
ruff = "^0.0.263"
isort = "^5.12.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
