[tool.poetry]
name = "undl"
version = "1.0.0c"
description = "API to interact with UN Digital Library and format output in a more convenient way"
authors = ["Clément Sicard <clement@sicard.ch>"]
maintainers = ["Clément Sicard <clement@sicard.ch>"]
readme = "README.md"
packages = [{ include = "undl" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pymarc = "^4.2.2"
loguru = "^0.7.0"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pre-commit = "^3.2.2"
ruff = "^0.0.263"
isort = "^5.12.0"
mypy = "^1.4.0"
interrogate = "^1.5.0"
pytest = "^7.4.0"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-module = true
fail-under = 100
verbose = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
